# DobotCr3

DobotCr3_model/cr3_moveit/launch/: cr3_moveit_planning_execution.launch  planning_context.launch
DobotCr3_model/dobot_description/launch/: display.launch
DobotCr3_model/dobot_description/urdf/: cr3_robot.xacro
common_sensors/urdf/sample_robots/: kinect.urdf  kinect2.urdf
dobot_gazebo/: CMakeLists.txt
dobot_gazebo/launch/: controller.yaml  cr3_robot_description.xml  gazebo.launch  robot_control.xml
dobot_gazebo/models/floor/: model.config
dobot_gazebo/models/mesa/: model.config  model.sdf
dobot_gazebo/models/mesa/meshes/: mesaDobot.stl
dobot_gazebo/models/wood_cube/: model.sdf
dobot_gazebo/src/: DobotMover2.py  clearLog.py  coords.py  gripperControl.py  pointCloudImage.py  visionMesa.py
dobot_gazebo/urdf/: cr3_robot.xacro
dobot_gazebo/worlds/: mundoDobot.world
dobot_real/: CMakeLists.txt  package.xml
dobot_real/launch/: topicosKinect.launch  vision.launch
dobot_real/msg/: coordsMat.msg
dobot_real/src/: centrarMesa.py  controlGripper.py  detectFinish.py  initRobot.py  localization.py  monitorPosition.py  moveRobot.py  testMoveDobot.py  visionMesa.py
gripper/dh_ag95_description/urdf/: ag95_macro.xacro
gripper/dh_gripper_driver/: CMakeLists.txt  package.xml
